# gss

./: .clcopying  .cvscopying  .cvsignore  .gitignore  .x-sc_GPL_version  .x-sc_cast_of_argument_to_free  .x-sc_prohibit_empty_lines_at_EOF  .x-sc_prohibit_test_minus_ao  .x-sc_texinfo_acronym  .x-sc_trailing_blank  ANNOUNCE  AUTHORS  ChangeLog  Makefile.am  Makefile.cfg  Makefile.in  NEWS  README  README-alpha  THANKS  TODO  aclocal.m4  cfg.mk  config.h.in  configure  configure.ac  gss.fms  gss.pc.in  index.html  maint-cfg.mk  params.json  project.config
debian/: changelog  control  copyright  docs  gss-doc.doc-base  gss-doc.info  libgss0-dev.install  libgss0.install  rules  watch
doc/: .cvsignore  Makefile.am  Makefile.gdoci  Makefile.in  announce.txt  asciidoc  gdoc  gendocs.sh  gendocs_template  ggssapi.texi  gss.1  gss.css  gss.info  gss.texi  stamp-vti  texinfo.conf
doc/cyclo/: Makefile.am  Makefile.in
doc/man/: gss_accept_sec_context.3  gss_acquire_cred.3  gss_add_cred.3  gss_add_oid_set_member.3  gss_canonicalize_name.3  gss_check_version.3  gss_compare_name.3  gss_context_time.3  gss_create_empty_oid_set.3  gss_decapsulate_token.3  gss_delete_sec_context.3  gss_display_name.3  gss_display_status.3  gss_duplicate_name.3  gss_encapsulate_token.3  gss_export_name.3  gss_export_sec_context.3  gss_get_mic.3  gss_import_name.3  gss_import_sec_context.3  gss_indicate_mechs.3  gss_init_sec_context.3  gss_inquire_context.3  gss_inquire_cred.3  gss_inquire_cred_by_mech.3  gss_inquire_mech_for_saslname.3  gss_inquire_mechs_for_name.3  gss_inquire_names_for_mech.3  gss_inquire_saslname_for_mech.3  gss_oid_equal.3  gss_process_context_token.3  gss_release_buffer.3  gss_release_cred.3  gss_release_name.3  gss_release_oid_set.3  gss_test_oid_set_member.3  gss_unwrap.3  gss_userok.3  gss_verify_mic.3  gss_wrap.3  (+1 more)
doc/reference/: .cvsignore  Makefile.am  Makefile.in  gss-docs.sgml  gss-docs.tmpl
doc/reference/tmpl/: .cvsignore
doc/specification/: draft-ietf-secsh-gsskeyex-09.txt  draft-williams-gssapi-stackable-pseudo-mechs-00.txt  draft-williams-gssapi-store-deleg-creds-00.txt  draft-williams-gssapi-store-deleg-creds-01.txt  gssapi-service-names
gl/: .cvsignore  Makefile.am  Makefile.am~  Makefile.in  pack.c  pack.h  xalloc.h  xgethostname.c  xmalloc.c  xstrdup.h
gl/m4/: .cvsignore  Makefile.am  gnulib-cache.m4  gnulib-cache.m4~  gnulib-comp.m4  gnulib-comp.m4~  gnulib.m4
gl/override/doc/: gendocs_template  gendocs_template.diff
gl/override/m4/: valgrind-tests.m4.diff
lib/: .cvsignore  Makefile.am  Makefile.in  api.h  asn1.c  context.c  cred.c  error.c  ext.c  ext.h  ggssapi.h.in  gss.asn1  gss.h.in  gss.map  gssapi.h  internal.h  krb5.c  krb5.h  libgss.map  meta.c  meta.h  misc.c  msg.c  name.c  obsolete.c  oid.c  saslname.c  version.c
lib/gl/: Makefile.am  Makefile.in
lib/gl/m4/: gnulib-cache.m4  gnulib-common.m4  gnulib-comp.m4
lib/gl/override/lib/: gettext.h.diff
lib/headers/: gss.h.in
lib/headers/gss/: api.h  ext.h  krb5-ext.h  krb5.h  openid20-ext.h  saml20-ext.h  scram-ext.h
lib/krb5/: Makefile.am  Makefile.in  checksum.c  checksum.h  context.c  cred.c  error.c  k5internal.h  krb5.h  msg.c  name.c  oid.c  protos.h  utils.c
lib/openid20/: Makefile.am  oid.c
lib/saml20/: Makefile.am  context.c  oid.c  protos.h
lib/scram/: Makefile.am  context.c  cred.c  oid.c  parser.c  printer.c  protos.h  tokens.c  validate.c
m4/: .cvsignore  Makefile.am  check_headerlib.m4
po/: .cvsignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  de.po.in  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  eo.gmo  eo.po.in  fi.gmo  fi.po  fi.po.in  fr.gmo  fr.po  fr.po.in  ga.gmo  ga.po  ga.po.in  ggssapi.pot  gss.pot  hr.po.in  hu.po.in  id.gmo  id.po  id.po.in  it.gmo  it.po  it.po.in  pl.gmo  pl.po  pl.po.in  ro.gmo  ro.po  rw.po  sk.gmo  sk.po  sk.po.in  (+9 more)
src/: .cvsignore  Makefile.am  Makefile.in  ggssapi.c  gss-cli.c  gss-cli.ggo  gss-serv.c  gss-serv.ggo  gss.c  gss.ggo  gss_cmd.c  gss_cmd.h  internal.h
src/gl/: Makefile.am  Makefile.in
src/gl/m4/: gnulib-cache.m4  gnulib-comp.m4
src/gl/override/lib/: gettext.h.diff
src/gl/tests/: Makefile.am
tests/: .cvsignore  Makefile.am  Makefile.in  basic.c  krb5.c  krb5context.c  name.c  saslname.c  threadsafety  utils.c
