## Process this file with automake to produce Makefile.in.

AUTOMAKE_OPTIONS = 1.5 gnits no-dependencies

noinst_LIBRARIES = libfoo.a

libfoo_a_SOURCES =
libfoo_a_LIBADD = @LIBOBJS@
#libfoo_la_LIBADD = @LTLIBOBJS@
EXTRA_DIST =
BUILT_SOURCES =
SUFFIXES =
MOSTLYCLEANFILES =
CLEANFILES =
DISTCLEANFILES =
MAINTAINERCLEANFILES =

libfoo_a_SOURCES += gettext.h



libfoo_a_SOURCES += unlocked-io.h

libfoo_a_SOURCES += xalloc.h xmalloc.c xstrdup.c

