## Process this file with automake to produce Makefile.in.

SUBDIRS = m4

AUTOMAKE_OPTIONS = 1.5 gnits no-dependencies

noinst_LTLIBRARIES = libfoo.la

libfoo_la_SOURCES =
#libfoo_a_LIBADD = @LIBOBJS@
libfoo_la_LIBADD = @LTLIBOBJS@
EXTRA_DIST =
BUILT_SOURCES =
SUFFIXES =
MOSTLYCLEANFILES =
CLEANFILES =
DISTCLEANFILES =
MAINTAINERCLEANFILES =

libfoo_la_SOURCES += gettext.h



libfoo_la_SOURCES += unlocked-io.h

libfoo_la_SOURCES += xalloc.h xmalloc.c xstrdup.c
